add extended acceptance checker for t3 and t4, claim t4
